# schoolpol.github.io

./: .gitignore  README.md  config.toml  make-europe-geojson.sh  package-lock.json  package.json  process_data.py  pyproject.toml  shell.nix  test_process_data.py  write_index.py
.ctags.d/: exclude-node-modules.ctags  exclude-source-data.ctags
.github/workflows/: python-unit.yml
data/AL/: AL.geojson
data/AT/: AT.geojson
data/AT/1971/: ed_isced_0to2.json  ed_isced_3to5_m.json  ed_isced_6to8_m.json
data/AT/1981/: ed_isced_0to2.json  ed_isced_0to2_m.json  ed_isced_3to5.json  ed_isced_3to5_f.json  ed_isced_3to5_m.json  ed_isced_6to8.json  ed_isced_6to8_m.json
data/BE/: BE.geojson
data/BG/: BG.geojson
data/CH/: CH.geojson
data/CY/: CY.geojson
data/DK/: DK.geojson
data/EE/: EE.geojson
data/FI/: FI.geojson
data/HR/: HR.geojson
data/HU/: HU.geojson
data/IS/: IS.geojson
data/LI/: LI.geojson
data/LT/: LT.geojson
data/LU/: LU.geojson
data/LV/: LV.geojson
data/MK/: MK.geojson
data/MT/: MT.geojson
data/NL/: NL.geojson
data/NO/: NO.geojson
data/PT/: PT.geojson
data/RS/: RS.geojson
data/SE/: SE.geojson
data/SI/: SI.geojson
data/SK/: SK.geojson
data/UK/: UK.geojson
docs/: asset-manifest.json  index.html
nix/: sources.json
prepare-data/: geojson.py  process_data.py  write_index.py
public/: index.html
reports/: missing.py  missing.tsv
src/: App.jsx  LAU.js  centroids.json  config.json  config.toml  countries.json  dataindex.json  index.css  palette.js
src/components/: About.jsx  Chooser.jsx  Map.jsx
(+12863 files in other folders)
