[tool.poetry]
name = "schoolpol"
version = "0.1.0"
description = "Generates data files to be used by Schoolpol React app"
authors = ["Abhishek Dasgupta <abhishek.dasgupta@cs.ox.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pycountry = "^22.3.5"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
